refactor: merge 충돌로 인한 잘못된 수정으로 사라진 위시리스트 페이지 조회기능 복구